# webapp-manager

./: .gitignore  MANIFEST.in  README.md  create-venv.sh  io.github.junalmeida.webapp-manager.json  io.github.junalmeida.webapps-manager.json  io.github.junalmeida.webapps_manager.json  package-build.sh  package-run.sh  package.sh  pyproject.toml
.github/workflows/: build.yml  deploy.yml
app/etc/xdg/menus/applications-merged/: io.github.junalmeida.webapps_manager.menu
app/share/glib-2.0/schemas/: org.x.webapp-manager.gschema.xml
app/share/metainfo/: io.github.junalmeida.webapps_manager.metainfo.xml
app/share/metainfo/releases/: io.github.junalmeida.webapps_manager.releases.xml
src/: WebAppEdit.py  WebAppManager.py  WebAppManagerWindow.py  WebAppManagerWindow.ui  __init__.py  __main__.py  application.py  browser.py  category.py  common.py  icons.py  version.py
usr/lib/webapp-manager/: browser.py  category.py  common.py  webAppEdit.py  webapp-manager.py  webapp-manager.ui
usr/share/applications/: io.github.junalmeida.webapps_manager.desktop
usr/share/desktop-directories/: io.github.junalmeida.webapps_manager.directory
usr/share/metainfo/: io.github.junalmeida.webapp-manager.metainfo.xml  io.github.junalmeida.webapps_manager.metainfo.xml
